# cpp-dev

./: .gitignore  LICENSE  README.md  hello.py  mypy.ini  pyproject.toml  ruff.toml
.archive/: bck.txt
.archive/package/: types.py
.archive/tests/common/: test_file_io.py
.archive/tests/package/: test_cache.py
.archive/tests/package/data/: test_types.py
.github/workflows/: ci.yml  documentation.yml  python.yaml  python.yml
conan/config/: remotes.json  settings.yml
conan/config/profiles/: ubuntu2404_dev_tooling
conan/recipes/googletest/: LICENSE  README.md  conanfile.py
conan/recipes/googletest/test_package/: conanfile.py
conan/recipes/googletest/test_v1_package/: conanfile.py
conan/recipes/llvm/: conandata.yml  conanfile.py
conan/recipes/llvm/test_package/: CMakeLists.txt  CMakeUserPresets.json  conanfile.py
docs/: book.toml
docs/src/: SUMMARY.md  ch01_introduction.md
scripts/: ci.bash
src/cpp_dev/common/: conan.py  file_io.py  os.py  process.py  types.py  utils.py  version.py
src/cpp_dev/conan/: command_wrapper.py  commands.py  config.py  package.py  setup.py  types.py  utils.py
src/cpp_dev/conan/config/: remotes.json
src/cpp_dev/dependency/: parser.py  parts.py  provider.py  specifier.py  specifier_parser.py  types.py
src/cpp_dev/package/: artifact_downloader.py  artifact_io.py  artifact_provider.py  cache.py  constants.py  file_provider.py  resolver.old.py  resolver.py  store.py  types.py
src/cpp_dev/packaging/: core.py
src/cpp_dev/pkg_mgmt/: constants.py  setup.py  types.py  utils.py
src/cpp_dev/project/: __init__.py  config.py  constants.py  core.py  dependency.py  env.py  lockfile.py  management.py  path_composition.py  setup.py  types.py  utils.py
src/cpp_dev/tool/: init.py  initialization.py  version.py
src/cpp_dev/ui/: arg_types.py  cli.py  commands.py  mgmt.py  project.py
src/tests/cpp_dev/: conftest.py
(+78 files in other folders)
