[tool.poetry]
name = "cpp-dev"
version = "0.1.0"
description = ""
authors = ["Andi Hellmund <am.hellmund@gmail.com>"]
readme = "README.md"
packages = [{include = "cpp_dev", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
typed-argparse = "^0.3.1"
pydantic = "^2.7.3"
pyyaml = "^6.0.1"
pytest = "^8.2.2"
flake8-pyproject = "^1.2.3"
pytest-httpserver = "^1.0.10"
httpx = "^0.27.0"
pytest-cov = "^5.0.0"
filelock = "^3.15.3"
distro = "<=1.8.0"
conan = "^2.9.1"
ninja = "^1.11.1.1"
lcov = "^1.15.5a0"

[tool.poetry.scripts]
cpd = "cpp_dev.ui.cli:main"

[tool.flake8]
max-line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
