[project]
name = "cpp-dev"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "conan>=2.11.0",
    "conan-server>=2.11.0",
    "distro>=1.8.0",
    "filelock>=3.16.1",
    "flake8-pyproject>=1.2.3",
    "lcov>=1.15.5a0",
    "mypy>=1.14.0",
    "ninja>=1.11.1.3",
    "pydantic>=2.10.4",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pyyaml>=6.0.2",
    "ruff>=0.8.4",
    "typed-argparse>=0.3.1",
    "types-pyyaml>=6.0.12.20241221",
]

[project.scripts]
cpd = "cpp_dev.ui.cli:main"
